--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "moment": "^2.29.4",
     "socket.io": "^4.5.2"
   }
 }
