--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "entrega-websocket",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +14,10 @@
     "bootstrap": "^5.2.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.3.0",
     "moment": "^2.29.4",
-    "socket.io": "^4.5.2"
+    "mysql": "^2.18.1",
+    "socket.io": "^4.5.2",
+    "sqlite3": "^5.1.2"
   }
 }
