problemas con mensajes

--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon --inspect --tls-min-v1.0 index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@types/jest": "^29.2.2",
     "bootstrap": "^5.2.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "knex": "^2.3.0",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.5.2",
     "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "jest": "^29.3.1"
   }
 }
